styles.css
:root {
    --xiketic: #141115;
    --tan: #D0E3C4;
    --dark-tan: #d6cc95;
    --darker-tan: #beb26f;
    --darkest-tan: #a0934d;
}



@font-face {
    font-family: floral;
    src: url('fonts/FLORAL\ PERSONAL\ USE.otf');
}

@font-face {
    font-family: palm;
    src: url('fonts/Palm\ Beach.ttf');
}

@font-face {
    font-family: eunoia;
    src: url('fonts/eunoia\ FREE.ttf');
}

body {
    box-sizing: border-box;
    margin: 0;
    height: 100vh;
    max-height: 100vh;

    background-color: white;

    position: relative;
}

body.no-scroll::-webkit-scrollbar {
    display: none;
}

body.no-scroll {
    -ms-overflow-style: none;
    scrollbar-width: none;
}

#content {
    box-sizing: border-box;
    padding: 8px;
    transition: all 1s, top 0.5s;

    overflow-y: scroll;

    /* height: 100%; */
    width: 100%;
    background-color: white;

    position: absolute;
    top: 0;
    left: 0;
}

#content.styled {
    padding: 0px;
    background-color: var(--xiketic);
    color: var(--tan);

    font-family: eunoia, serif;
}

#content::-webkit-scrollbar {
    display: none;
}

#content {
    -ms-overflow-style: none;
    scrollbar-width: none;
}

.section {
    box-sizing: border-box;
    transition: height 1s;

    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: flex-start;

}

.styled>.section {

    height: 100vh !important;
    width: 100vw !important;
}

.item-box {
    transition: width 1s;
    display: flex;
    justify-content: center;
}

.styled .item-box {
    width: 100% !important;
}

#main-title {
    display: none;
}

#other-projects {
    display: none;
}

#featured-projects {
    display: none;
}

#about {
    display: none;
}

#main-title h1 {
    background-clip: text;
    -webkit-background-clip: text;

    font-size: 2rem;
    transition: all 1s;
    background-color: var(--tan);

    white-space: nowrap;
}

.styled #main-title h1 {
    font-size: 8rem;
    margin: 0;

    font-family: floral, sans-serif;
    font-weight: lighter;

    position: relative;
    z-index: 1;
}

#main-title h1::before {
    content: attr(text-content);

    position: absolute;
    top: 50%;
    left: 50%;
    z-index: -1;

    background-clip: text;
    -webkit-background-clip: text;

    transform: translate(-50%, -50%);

    background-color: rgba(255, 0, 0, 0);
    color: transparent;

    transition: background-color 1s;
    transition-delay: 0.5s;
}

.styled #main-title h1::before {
    background-color: rgb(255, 0, 0);
}

.styled #main-title h2 {
    margin: 0;
    font-size: 2rem;
    white-space: nowrap;
    transition: all 1s;
}

.flicker>pre {
    display: inline-block;
    font-family: serif;
    transform-origin: left;
    margin: 0;
}

.styled .flicker>pre {
    transform: translate(0%, 0%);
    display: inline-block;

    font-family: floral, sans-serif;
    transform: translateY(0%) scaleY(1);
}

.styled .flicker>pre.flickered {
    animation: flicker 1.5s cubic-bezier(.35, .04, 0, 1.1);
}

@keyframes flicker {
    0% {
        transform: scaleX(1)
    }

    25% {
        transform: scaleX(-1)
    }

    100% {
        transform: scaleX(1)
    }
}

#featured-projects,
#other-projects {
    padding: 20px;
}

#featured-projects h2 {
    transition: all 1s;
    white-space: nowrap;
}

.styled #featured-projects h2,
.styled #other-projects h2 {
    font-size: 4rem;
    margin: 0 0 40px 0;
}

.featured-box {
    display: flex;
    max-width: 440px;
    flex-wrap: wrap;
    transition: all 1s;
}

.styled .featured-box {
    width: 100%;
    max-width: initial;
    flex-wrap: initial;

    justify-content: center;
    gap: 4rem;
}

.styled #featured-projects .featured-box {
    gap: 20px;
}

.styled #featured-projects-sidebar {
    display: flex;
    flex-direction: column;
    gap: 40px;
}

.styled .featured-project {
    color: black;
    background-color: var(--tan);

    padding: 20px;
    position: relative;
    width: 45vw;
    height: 15vh;

    display: flex;
    align-items: center;
    gap: 20px;

    cursor: pointer;

    max-width: 500px;
}

.styled .featured-project:hover {
    filter: brightness(0.85);
}

.styled .transform-wrapper:not(.card)>.project::after {
    content: '';
    height: 10%;
    width: 10%;

    position: absolute;
    top: 0;
    left: 0;

    transform: translate(0%, -90%);

    background-color: var(--tan);
}

.styled .card>.card-tab {
    height: 10%;
    width: 10%;

    position: absolute;
    top: 0;
    left: 0;

    transform: translate(0%, -90%);
    border-radius: 5px 5px 0 0;

    background-color: var(--tan);
    color: black;

    display: flex;
    justify-content: center;
    align-items: center;
}

.styled .card>.card-tab>.card-tab-text {
    padding: 5px;
}

.title-description-box {
    flex-grow: 1;
}

.styled .project-img {

    height: 100%;
    aspect-ratio: 1 / 1;

    background-size: contain;
    background-position: center;
    background-repeat: no-repeat;

    position: relative;
    z-index: 1;
}

.styled .project-img::after {
    content: '';
    position: absolute;
    top: 0;
    left: 0;
    z-index: 2;

    height: 6%;
    width: 20%;
    background-color: var(--xiketic);
    transform-origin: center center;
    transform: rotate(-45deg) translate(-30%, -20%);
}

.styled .project-img::before {
    content: '';
    position: absolute;
    bottom: 0;
    right: 0;
    z-index: 2;

    height: 6%;
    width: 20%;
    background-color: var(--xiketic);
    transform-origin: center center;
    transform: rotate(-45deg) translate(30%, 20%);
}

.box {
    transition: all 0.1s;
}

.styled .selected-project-box {
    flex-grow: 1;
    max-width: 500px;
    padding: 0 20px;

    display: flex;
    flex-direction: column;

    position: relative;
}

.styled .selected-project-box h3 {
    margin: 10px 0;
}

.styled .selected-project-box p {
    margin: 10px 0;
    padding-bottom: 10px;
}
/* ... */

